--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
-0.02	- 29 Mar 2009, H.Merijn Brand
+0.02	- 30 Mar 2009, H.Merijn Brand
 
     - Added plv2hash
+    - Documentation
+    - Add all (new) version related config entries, including git
+    - Add a derived section
 
 0.01	- 29 Mar 2009, H.Merijn Brand
 
