--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.03	- 05 Apr 2009, H.Merijn Brand
+
+    - Reconstruct version from perl-v output (dagolden)
+
 0.02	- 30 Mar 2009, H.Merijn Brand
 
     - Added plv2hash ()
