--- a/README
+++ b/README
@@ -20,6 +20,19 @@ BUILDING AND INSTALLATION
 	$ make test
 	$ make install UNINST=1
 
+SOURCE CODE
+
+    Recent changes can be (re)viewed in the public GIT repository at
+    http://repo.or.cz/w/Config-Perl-V.git
+    Feel free to clone your own copy:
+
+     $ git clone http://repo.or.cz/r/Config-Perl-V.git Config-Perl-V
+
+    or get it as a tgz:
+
+     $ wget --output-document=Config-Perl-V.tgz \
+	       'http://repo.or.cz/w/Config-Perl-V.git?a=snapshot;sf=tgz'
+
 CHANGES
 
     See Changelog
