--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.04	- 20 May 2009, H.Merijn Brand
+
+    - Default for summary is myconfig
+
 0.03	- 05 Apr 2009, H.Merijn Brand
 
     - Reconstruct version from perl-v output (dagolden)
