--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
-0.10	- 19 Aug 2009, H.Merijn Brand
+0.10	- 09 Sep 2009, H.Merijn Brand
 
     - Add PERL_DISABLE_PMC to the list of -V's compile-time options.
+    - pod fix (Jim Cromie)
 
 0.05	- 01 Jul 2009, H.Merijn Brand
     - 0.04 was shipped with 0.05 as $VERSION. Sorry
