--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.11	- 17 Dec 2009, H.Merijn Brand
+
+    - osname in {build} can be different from {config} (OpenBSD vs openbsd)
+
 0.10	- 24 Sep 2009, H.Merijn Brand
 
     - Add PERL_DISABLE_PMC to the list of -V's compile-time options.
