--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
-0.11	- 21 Jan 2010, H.Merijn Brand
+0.11	- 15 Mar 2010, H.Merijn Brand
 
+    - Upped copyright to 2010
     - osname in {build} can be different from {config} (OpenBSD vs openbsd)
     - Add USE_ATTRIBUTES_FOR_PERLIO to the list of -V's compile-time options.
     - Add USE_PERL_ATOF to the list of -V's compile-time options.
