--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.12	- 16 Mar 2010, H.Merijn Brand
+
+    - YAML dropped to spec 1.0 (RT#55614)
+
 0.11	- 15 Mar 2010, H.Merijn Brand
 
     - Upped copyright to 2010
