Some spelling fixes

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.13	- 07 Jun 2010, H.Merijn Brand
+
+    - Some spelling fixes
+
 0.12	- 16 Mar 2010, H.Merijn Brand
 
     - YAML dropped to spec 1.0 (RT#55614)
