--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 0.14	- 07 Sep 2011, H.Merijn Brand
 
     - Upped copyright to 2011
+    - NAME / DISTNAME in Makefile.PL
 
 0.13	- 07 Sep 2011, H.Merijn Brand
 
