--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,5 @@
-0.15	- 08 Sep 2011, H.Merijn Brand
-    * 
+0.15	- 11 Jan 2012, H.Merijn Brand
+    * Update copyright to 2012
 
 0.14	- 07 Sep 2011, H.Merijn Brand
     * Upped copyright to 2011
